--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="utng.edu.mx.wsuserportal">
+    package="utng.edu.mx.wsclientes">
 
     <application
         android:allowBackup="true"
@@ -8,17 +8,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ClientesWS">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
 
         </activity>
-        <activity android:name=".ListUserPortal"
-            android:label="List UserPortals"></activity>
+        <activity android:name=".ListClientes"
+            android:label="List Cliente"></activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
